hphp/test/slow/closure-await-fail.php.expectf

Fatal error: Await may only appear in an async function in %s/closure-await-fail.php on line 4
